--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <h1>FLOW MASTERS</h1>
 
 
-<link rel="stylesheet" href="style.css">
+<style>
+    
+</style>
 
 <div class="row d-flex justify-content-center container">
     <div class="col-md-8">
