--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ i {
                         <div class="widget-content-left">
                           <div class="widget-heading hed">&nbsp;&nbsp;&nbsp;1: Greeting:
 
-Thank you for choosing OPTIMUM this is Milad How May I help you today?
+Thank you for choosing OPTIMUM this is 'NAME' How May I help you today?
                           </div>
                           </div>
                         </div>
@@ -458,6 +458,7 @@ AS I can see you are not having a mobile account with us which guarantee you a d
                       <H3>By YOUSSEF ESSAM ELDIN</H3>
                       <p>unofficial website</p>
                       <P>youssef.essameldinashourahmedmanso@alticeusa.com</P>
+			<p>source of info 'Milad MouradHannaNasif'</p>
        
       </div>
     </div>
