--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FLOW MASTERS</title>
+	<link rel="icon" type="image/x-icon" href="/premium-account.png">
     </head>
     <style>
         body {
