--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             font-size:16px;
             font-weight:bold;
 			color: white;
+			min-height: 100%;
+			zoom: 1.7; 
+    -moz-transform: scale(3); 
+    -moz-transform-origin: 0 0;
         }
 
         .page-todo .tasks {
@@ -441,6 +445,7 @@
             <div class="col-sm-7 tasks">
                 <div class="task-list">
                     <h1>FLOW MASTERS</h1>
+					<h5>Say it your way</h5>
                     <div class="priority high"><span>OPENING</span></div>
                     <div class="task high">
                         <div class="desc">
@@ -474,6 +479,7 @@
                             <input type="checkbox" class="done" name="vehicle1" value="Bike">
                         </div>
                     </div>
+					</div>
                     <div class="task high">
                         <div class="desc">
                             <div class="title">Rephrase</div>
@@ -486,23 +492,24 @@
                         <div class="desc">
                             <div class="title">Verification + CPNI</div>
                             </div>
-                        </div>
+                        
                         <div class="time">
                             <input type="checkbox" class="done" name="vehicle1" value="Bike">
                         </div>
-                    </div>
+					</div>
+                    
                     <div class="priority medium"><span>PROCESS</span></div>
                     <div class="task medium">
                         <div class="desc">
                             <div class="title">selfhelp   </div>
-                            </div>
+                        </div>
                         <div class="time">
                             <input type="checkbox" class="done" name="vehicle1" value="Bike">
                         </div>
                     </div>
                     <div class="task medium last">
                         <div class="desc">
-                            <div class="title">Action and resolution + Rapport (Rapport can be done anywhere in the call)</div>
+                            <div class="title">Action and resolution + Rapport </div>
                             <div></div>
                         </div>
                         <div class="time">
@@ -540,7 +547,7 @@
                     </div>
 					<div class="task low">
                         <div class="desc">
-                            <div class="title">Survay</div>
+                            <div class="title">Survey</div>
                             <div></div>
                         </div>
                         <div class="time">
@@ -562,45 +569,7 @@
                 </div>
             </div>
         </div>
-		<section>
-			<h1>Coding/Remedy</h1>
-			<form>
-			<label>Caller name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<form>
-			<label>Account number:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<form>
-			<label>Best CB:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<form>
-			<label>STAT:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
-			</form>
-			</br>
-			<form>
-			<label>Issue:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<form>
-			<label>Resolution: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<form>
-			<label>Future Expectaions:</label>
-			<input type="text"></input>
-			</form>
-			</br>
-			<div></div>
-		</section>
+		
     </body>
     <br>
     <footer><div class="foot-element">&copy; Made by : YOUSSEF ESSAM ELDIN</div>
